// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`crawlFeed request calls 1`] = `
Array [
  Array [
    "error",
    [Function],
  ],
  Array [
    "response",
    [Function],
  ],
]
`;

exports[`crawlFeed request response handler 1`] = `
Array [
  Array [
    "error",
    [Function],
  ],
  Array [
    "readable",
    [Function],
  ],
  Array [
    "end",
    [Function],
  ],
]
`;

exports[`fetchLatestPosts Feed.find call 1`] = `
Array [
  Array [
    Object {},
    [Function],
  ],
]
`;

exports[`fetchLatestPosts Feed.find handler for sucess: queue constructor 1`] = `
Array [
  Array [
    undefined,
    Object {
      "redis": Object {
        "host": undefined,
      },
    },
  ],
]
`;
